--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -96,11 +96,9 @@ body {
         <div class="subnav-content">
             <a href="https://portalkadry.hamilton.com.pl:8443/xpertis" target="_blank">Portal kadry Wnioski</a>
             <a href="https://hrnest.io/Account/LogOn>HRnest Delegacje" target="_blank">Delegacje HRnest</a>
-            <a href="#link3">Link 3</a>
-            <a href="#link4">Link 4</a>
         </div>
     </div>
-    <a href="#contact">Contact</a>
+    <a href="#contact">Tu będą dodatkowe strony które sa przydatne</a>
 </div>
 
 <div style="padding:0 16px">
