Dodany servicedesk i Lab2011

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -72,7 +72,15 @@ body {
 <body>
 
 <div class="navbar">
-
+    <div class="subnav">
+        <!--dodaj adresy do HamiltonLab2011 oferty i zlecenia -->
+        <button class="subnavbtn">HamiltonLab2011  <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+            <a href="https://oferty.hamilton.com.pl" target="_blank">Oferty produkcja</a>
+            <a href="https://portal2.hamilton.com.pl/pracownik" target="_blank">Zlecenia produkcja</a>
+            <a href="https://newlims.hamilton.com.pl" target="_blank">Lims produkcja</a>
+        </div>
+    </div>
     <div class="subnav">
         <button class="subnavbtn">Lims PROD  <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
@@ -81,6 +89,7 @@ body {
             <a href="https://newlims.hamilton.com.pl" target="_blank">Lims produkcja</a>
         </div>
     </div>
+
     <div class="subnav">
         <button class="subnavbtn">Lims UAT <i class="fa fa-caret-down"></i></button>
         <div class="subnav-content">
@@ -88,7 +97,13 @@ body {
             <a href="https://portal2-test.hamilton.com.pl/pracownik" target="_blank">Zlecenia pracownik uat</a>
             <a href="https://portal2-test.hamilton.com.pl/" target="_blank">Zlecenia klient uat</a>
             <a href="https://newlims-uat.hamilton.com.pl" target="_blank">Lims uat</a>
-
+        </div>
+    </div>
+    <div class="subnav">
+        <button class="subnavbtn">Hamilton Lab2011<i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+            <a href="https://oferty.hamilton.com.pl/offers/my" target="_blank">Oferty Hamilton Lab2011</a>
+            <a href="https://portal.hamilton.com.pl/pracownik" target="_blank">Zlecenia pracownik Lab2011</a>
         </div>
     </div>
     <div class="subnav">
@@ -96,6 +111,13 @@ body {
         <div class="subnav-content">
             <a href="https://portalkadry.hamilton.com.pl:8443/xpertis" target="_blank">Portal kadry Wnioski</a>
             <a href="https://hrnest.io/Account/LogOn>HRnest Delegacje" target="_blank">Delegacje HRnest</a>
+        </div>
+    </div>
+    <div class="subnav">
+        <button class="subnavbtn">Service desk <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+            <a href="https://servicedesk.hamilton.com.pl" target="_blank">Service desk ZOHO</a>
+            <a href="#" target="_blank">Hakon pomoc</a>
         </div>
     </div>
     <a href="#contact">Tu będą dodatkowe strony które sa przydatne</a>
