--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -113,6 +113,12 @@ body {
             <a href="#" target="_blank">Hakon pomoc</a>
         </div>
     </div>
+       <div class="subnav">
+        <button class="subnavbtn">IFS Main page <i class="fa fa-caret-down"></i></button>
+        <div class="subnav-content">
+            <a href="https://jsh-sv-ifspr-01.jshlaboratoria.local:48080/" target="_blank">IFS</a>
+        </div>
+    </div>
     <a href="#contact">Tu będą dodatkowe strony które sa przydatne</a>
 </div>
 
