--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -123,6 +123,9 @@ body {
 <div style="padding:0 16px">
     <h3>Wybieramy</h3>
     <p>Najedź myszką i wybierz interesujący adres</p>
+      <br>
+      <br>
+      <h3> Dodano IFS do menu !<h3>
 </div>
 
 </body>
