--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -125,8 +125,8 @@ body {
     <p>Najedź myszką i wybierz interesujący adres</p>
       <br>
       <br>
-      <h3> Dodano IFS do menu !</h3>
-       <p id="blink"> This is an example of blinking text using JS. </p>
+      <h3> Uwaga nowa pozycja w menu !</h3>
+       <p id="blink"> Dodano nwą pozycję w menu IFS. </p>
     <script type="text/javascript">
         var blink = document.getElementById('blink');
         setInterval(function() {
