--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -126,6 +126,20 @@ body {
       <br>
       <br>
       <h3> Uwaga nowa pozycja w menu !</h3>
+      
+  
+      
+      
+        <p id="blink"> This is an example of blinking text using JS. </p>
+    <script type="text/javascript">
+        var blink = document.getElementById('blink');
+        setInterval(function() {
+            blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
+        }, 1500);
+    </script>
+      
+      
+      
  
 </div>
 
