--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -131,7 +131,7 @@ body {
  
 </div>
       
-            <p id="blink"> This is an example of blinking text using JS. </p>
+            <p id="blink"> Dodano IFS. </p>
     <script type="text/javascript">
         var blink = document.getElementById('blink');
         setInterval(function() {
