--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -130,7 +130,7 @@ body {
 
 </div>
 <div style="padding:0 20px" >
-<p id="blink"> Nowa pozycja w menu. </p>
+<p id="blink"> Dodano IFS do menu. </p>
 <script type="text/javascript">
         var blink = document.getElementById('blink');
         setInterval(function() {
