--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -125,12 +125,12 @@ body {
     <p>Najedź myszką i wybierz interesujący adres</p>
       <br>
       <br>
-      <h3> Uwaga nowa pozycja w menu !</h3>
+      <h3> Dodano IFS do menu</h3>
 
 
 </div>
 <div style="padding:0 20px" >
-<p id="blink"> Dodano IFS do menu. </p>
+<p id="blink"> Nowa pozycja w menu. </p>
 <script type="text/javascript">
         var blink = document.getElementById('blink');
         setInterval(function() {
